--- a/src/App.css
+++ b/src/App.css
@@ -77,6 +77,10 @@ td {
   display: none;
 }
 
+.block {
+  display: block;
+}
+
 .revealed {
   display: block;
   color: blue;
@@ -84,6 +88,34 @@ td {
 
 .default-cursor {
   cursor: default;
+}
+
+#win-popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+
+.popup {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #fff;
+  padding: 1em;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  z-index: 2;
+}
+
+.popup-content {
+  margin: 0 auto;
+  width: 50%;
+  text-align: center;
 }
 
 /* .wall:before {
