--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,6 @@ html {
   width: 100%;
   height: 100%;
   background: #636363;
-  /* -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none; */
 }
 
 #root {
@@ -16,7 +10,7 @@ html {
 }
 
 .container {
-  margin: 1em;
+  margin: 1em auto;
 }
 
 .inline {
@@ -37,6 +31,10 @@ label {
   background: linear-gradient(#f7aeb7, #ffcccc, #ffeee6);
 }
 
+iframe {
+  display: none;
+}
+
 table {
   border-collapse: collapse;
   border-spacing: -1 !important;
@@ -45,7 +43,8 @@ table {
 td {
   margin: 0;
   padding: 0px;
-  min-width: 2em;
+  min-width: auto;
+  min-height: auto;
   width: 2em;
   height: 2em;
   text-align: center;
@@ -55,10 +54,6 @@ td {
   background: #eee;
   /* create surrounding border */
   border: 1px solid #ccc;
-}
-
-.cell-hidden::before {
-  content: "";
 }
 
 .cell-hidden:hover {
@@ -142,61 +137,9 @@ td {
 }
 
 
-/* Custom, iPhone Retina */
-
-@media only screen and (min-width: 120px) {
-  td {
-    min-width: 2em;
-    width: 2em;
-    height: 2em;
-    font-size: .4em;
-  }
-}
-
-
-/* Extra Small Devices, Phones */
-
-@media only screen and (min-width: 480px) {
-  td {
-    min-width: 2em;
-    width: 2em;
-    height: 2em;
-    font-size: .6em;
-  }
-}
-
-
-/* Small Devices, Tablets */
-
-@media only screen and (min-width: 768px) {
-  td {
-    min-width: 2em;
-    width: 2em;
-    height: 2em;
-    font-size: 1em;
-  }
-}
-
-
-/* Medium Devices, Desktops */
-
-@media only screen and (min-width: 992px) {
-  td {
-    min-width: 2em;
-    width: 2em;
-    height: 2em;
-    font-size: 1em;
-  }
-}
-
-
-/* Large Devices, Wide Screens */
-
 @media only screen and (min-width: 1200px) {
   td {
-    min-width: 2em;
-    width: 2em;
-    height: 2em;
-    font-size: 1em;
+    width: 3.5em;
+    height: 3.5em;
   }
 }
