--- a/src/App.css
+++ b/src/App.css
@@ -121,6 +121,12 @@ td {
 	padding: 0 !important;
 }
 
+.flex-row-center {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: row;
+}
 
 @media only screen and (min-width: 1000px) {
 	td {
